# pdf-summarizer

./: Cargo.toml  README.md
.github/workflows/: general.yml
src/: args.rs  lib.rs  main.rs  ollama_api.rs  run.rs
tests/it/: commands.rs
